fix: fixed hits display height, no more scroll jumps

--- a/example/style.css
+++ b/example/style.css
@@ -1,7 +1,14 @@
+html {
+  /* force vertical scrollbar no matter the content,
+  avoid container center position changes */
+  overflow-y: scroll;
+}
+
 body {
   padding: 2em 0;
 }
 
+/* Hits widget */
 .hit + .hit {
   margin-top: 1em;
   padding-top: 1em;
@@ -11,4 +18,20 @@ body {
 .hit em {
   font-style: normal;
   background-color: lightcyan;
+}
+
+/* Force widths and heights to avoid vertical size changes.
+  So that pagination clicks will not jump */
+.hit img {
+  max-height: 100px;
+  max-width: 100px;
+}
+
+.hit p {
+  max-height: 50px;
+  text-overflow: ellipsis;
+}
+
+.hit {
+  height: 125px;
 }
